# oofengine

./: .gitignore  Cargo.toml  README.md  build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
media/bighead/: bighead.blend  bighead.mtl  bighead2.mtl
src/: main.rs
src/main/java/oof/oofengine/: OofEngineApplication.java
src/main/java/oof/oofengine/christiantest/: ChristianTest.java
src/main/java/oof/oofengine/control/: Camera.java
src/main/java/oof/oofengine/data/: CameraSettings.java  Constants.java  LoaderUtils.java  Material.java  Mesh.java  Model.java  Object3D.java  ObjectMatrixSamples.java  OofConfig.java  Texture.java  Vector2f.java  Vector3f.java
src/main/java/oof/oofengine/display/: WindowManager.java
src/main/java/oof/oofengine/model/: CameraSettings.java  Material.java  Mesh.java  Model.java  ObjectMatrixSamples.java  SimpleModel.java  Texture.java
src/main/java/oof/oofengine/render/: Tutorial.java
src/main/java/oof/oofengine/renderEngine/: Loader.java  RawModel.java  Renderer.java
src/main/oof/oofengine/: Main.java
src/main/oof/oofengine/data/: Object3D.java
src/main/resources/oof/: bighead.mtl
src/main/resources/shader/: fragmentShader2.fsh  tutorial_3_simpletransform.vsh  tutorial_3_singlecolor.fsh  vertexShader2.vsh
src/main/resources/shader/3dGameDevWithLWJGL_Transformations/: vertex.vsh
src/main/resources/shader/tutorial5/: textureShader.fsh  textureShader.vsh
src/main/resources/shader/tutorial5.1/: textureShader.fsh  textureShader.vsh
src/main/resources/texture/: uvtemplate_flipped.DDS
(+14 files in other folders)
