[package]
name = "oofengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
three-d = { version = "0.14.0", features=["egui-gui"] }
three-d-asset = { version = "0.4.0", features = ["obj", "png", "jpeg", "http"] }
egui = { version = "0.20", optional = true }
egui_glow = { version = "0.20", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }